Add claim validity to grant access endpoint
