# openapi.yaml
@@ -1,5 +1,27 @@
 components:
   schemas:
+    ClaimValidity:
+      description: Start and end dates for validating claims.
+      properties:
+        valid_from:
+          description: Start date of validity
+          examples:
+          - '2023-01-01T00:00:00Z'
+          format: date-time
+          title: Valid From
+          type: string
+        valid_until:
+          description: End date of validity
+          examples:
+          - '2023-12-31T23:59:59Z'
+          format: date-time
+          title: Valid Until
+          type: string
+      required:
+      - valid_from
+      - valid_until
+      title: ClaimValidity
+      type: object
     CreateUploadBoxRequest:
       description: Request model for creating a new research data upload box.
       properties:
@@ -41,7 +63,10 @@ components:
           format: uuid4
           title: User Id
           type: string
+        validity:
+          $ref: '#/components/schemas/ClaimValidity'
       required:
+      - validity
       - user_id
       - iva_id
       - box_id
